--- a/telemetry/collector/pom.xml
+++ b/telemetry/collector/pom.xml
@@ -50,23 +50,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro-maven-plugin</artifactId>
-                <version>1.11.3</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>schema</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <sourceDirectory>telemetry/serialization/avro-schemas/src/main/avro/telemetry</sourceDirectory>
-                    <outputDirectory>telemetry/collector/src/main/java/kafka</outputDirectory>
-                </configuration>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
-
 </project>
