--- a/telemetry/collector/src/main/resources/application.yml
+++ b/telemetry/collector/src/main/resources/application.yml
@@ -2,7 +2,7 @@ collector:
   kafka:
     producer:
       properties:
-        "bootstrap.servers": localhost:9092
+        "bootstrap-servers": localhost:9092
       topics:
         sensor-events: telemetry.sensor.v1
         hubs-events: telemetry.hubs.v1
