--- a/telemetry/collector/pom.xml
+++ b/telemetry/collector/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>collector</artifactId>
 
+    <properties>
+        <jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>ru.yandex.practicum</groupId>
@@ -28,11 +32,11 @@
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>jackson-databind-nullable</artifactId>
-            <version>0.2.6</version>
+            <version>${jackson.databind.nullable.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
         </dependency>
         <dependency>
         <groupId>org.springframework.boot</groupId>
