--- a/telemetry/aggregator/pom.xml
+++ b/telemetry/aggregator/pom.xml
@@ -9,13 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>collector</artifactId>
-
-    <properties>
-        <jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
-        <grpc.spring.boot.starter.version>3.1.0.RELEASE</grpc.spring.boot.starter.version>
-    </properties>
-
+    <artifactId>aggregator</artifactId>
     <dependencies>
         <dependency>
             <groupId>ru.yandex.practicum</groupId>
@@ -64,9 +58,9 @@
             <artifactId>kafka-clients</artifactId>
         </dependency>
         <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
@@ -82,12 +76,13 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
+        <grpc.spring.boot.starter.version>3.1.0.RELEASE</grpc.spring.boot.starter.version>
+    </properties>
+
 </project>
