--- a/telemetry/collector/src/main/resources/application.yml
+++ b/telemetry/collector/src/main/resources/application.yml
@@ -6,3 +6,11 @@ collector:
       topics:
         sensor-events: telemetry.sensor.v1
         hubs-events: telemetry.hubs.v1
+
+grpc:
+  client:
+    echo:
+      address: 'static://127.0.0.1:9090'
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
